--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
-    "mongoose": "^6.6.5",
+    "@vuelidate/core": "^2.0.0",
+    "@vuelidate/validators": "^2.0.0",
     "vue": "^3.2.38"
   },
   "devDependencies": {
